# elsa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: titanic.csv
scripts/anthropic/: _00_memory.py
scripts/data/: visualize.py
scripts/google/: _00_single_prompt.py
scripts/openai/: README.md  _01_single_prompt.py  _02_system_prompt.py  _03_conversation.py  _03_failed_conversation.py  _04_conversation.py  _05_mcp_tools.py  _06_mcp_inspector.md  _07_tool_calling.py  _07_tool_calling_failed.py  _08_simple_agent.py  _09_console_app.py  _10_streamlit_app.py  _11_image_prompt.py  _12_code_interpreter.py  _13_code_interpreter_with_file_output.py  _14_streaming.py  _15_more_response_details.py  _16_retrieve_conversation.py  _17_logprobs.py  __init__.py
